RESOLVED FIXED27345
[UNIX] TestNetscapePlugin for Unix (X11) can not be loaded in gecko
https://bugs.webkit.org/show_bug.cgi?id=27345
Summary [UNIX] TestNetscapePlugin for Unix (X11) can not be loaded in gecko
Holger Freyther
Reported 2009-07-16 05:04:31 PDT
The TestNetscapePlugin can not be loaded in gecko because WebKit's NPNetscapeFuncs contain two more entries.
Attachments
[GTK+] Update the focus handling code. (2.38 KB, patch)
2009-07-16 05:36 PDT, Holger Freyther
no flags
[GTK+] Make TestNescpaePlugin loadable in mozilla (1.45 KB, patch)
2009-07-16 06:01 PDT, Holger Freyther
hausmann: review+
Holger Freyther
Comment 1 2009-07-16 05:36:33 PDT
Created attachment 32864 [details] [GTK+] Update the focus handling code. Make sure to call FocusController::setFocusedFrame when we didn't set a focused frame yet. We are doing this in the grab-focus and focus-in routine. --- 2 files changed, 30 insertions(+), 3 deletions(-)
Holger Freyther
Comment 2 2009-07-16 06:01:53 PDT
Created attachment 32866 [details] [GTK+] Make TestNescpaePlugin loadable in mozilla Currently the NPNetscapeFuncs of WebKit contains two more entries than the gecko version. This means comparing the aMozillaVTable->size with the size of NPNetscpaeFuncs will fail and the plugin will not be loaded. For testing it is nice to be able to load the plugin into gecko and currently we are not using the two extra methods. Remove the test to be able to use the plugin in gecko. --- 2 files changed, 13 insertions(+), 2 deletions(-)
Simon Hausmann
Comment 3 2009-07-17 00:32:17 PDT
Comment on attachment 32866 [details] [GTK+] Make TestNescpaePlugin loadable in mozilla r=me, I guess the same applies to the check below?
Holger Freyther
Comment 4 2009-07-17 08:57:25 PDT
Commited in r46036. Let me think about the other change.
Note You need to log in before you can comment on or make changes to this bug.